# talk-slides

./: README.md  note
pgday-2019/: filter_pg_logical_rows.rb
pgday-2019-workshop/rtunerbis/: .env  Cargo.toml
pgday-2019-workshop/rtunerbis/migrations/2019-05-10-135956_notes/: up.sql
pgday-2019-workshop/rtunerbis/src/: lib.rs  notes.rs  schema.rs
